--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <span class="icon-bar"></span>
         </button>
         <img id="fotonavbar" src="resources/foto.png" alt="Foto de Carlos Sánchez-Castro Coy">
-        <a class="navbar-brand" href="#Inicio">Carlos Sánchez-Castro Coy<br><br><small>Arquitecto especializado en GIS</small></a>
+        <a class="navbar-brand" href="#Inicio">Carlos Sánchez-Castro Coy<br><br><small>Arquitecto. Analista y desarrollador GIS (en formación)</small></a>
       </div>
 
       <form class="navbar-form navbar-right" role="search">
@@ -55,8 +55,6 @@
     </div>
   </nav>
 
-
-
   <!--<h1>Carlos Sánchez-Castro Coy. Arquitecto especializado en GIS
   <span><img id="Foto" src="resources/foto.jpg" alt="Foto de Carlos Sánchez-Castro Coy"></span>
 </h1>
@@ -64,125 +62,399 @@
 
 <h2 id="Experiencia">Experiencia profesional<span class="icon">&#xe903;</span></h2>
 <br>
-<table class="table table-striped table-bordered table-hover">
+<table class="table table-hover table-condensed">
   <tr>
-    <td class="text-center info"><strong>Empresa</strong></td>
-    <td class="text-center info"><strong>Lugar</strong></td>
-    <td class="text-center info"><strong>Duración</strong></td>
+    <td class="col-md-2 text-center">Fecha</td>
+    <td class="col-md-10 info">Puesto</td>
   </tr>
   <tr>
-    <td class="text-center">Empresa 1</td>
-    <td class="text-center">Lugar 1 <a href="www.coacm.org">Enlace 01</a></td>
-    <td class="text-center">Duración 1</td>
+    <td class="col-md-2 text-center"><span class="icon-blue">&#xe91b;</span></td>
+    <td class="col-md-10">Empresa</td>
   </tr>
   <tr>
-    <td class="text-center">Empresa 2</td>
-    <td class="text-center">Lugar 2 <a href="www.coacm.org">Enlace 02</a></td>
-    <td class="text-center">Duración 2</td>
-  </tr><tr>
-    <td class="text-center">Empresa n</td>
-    <td class="text-center">Lugar n <a href="www.coacm.org">Enlace n</a></td>
-    <td class="text-center">Duración n</td>
+    <td class="col-md-2 text-center"><span class="icon-blue">&#xe915;</span></td>
+    <td class="col-md-10">Descripción</td>
+  </tr>
+</table>
+
+<table class="table table-hover table-condensed">
+  <tr>
+    <td class="col-md-2 text-center">Fecha</td>
+    <td class="col-md-10 info">Puesto</td>
+  </tr>
+  <tr>
+    <td class="col-md-2 text-center"><span class="icon-blue">&#xe91b;</span></td>
+    <td class="col-md-10">Empresa</td>
+  </tr>
+  <tr>
+    <td class="col-md-2 text-center"><span class="icon-blue">&#xe915;</span></td>
+    <td class="col-md-10">Descripción</td>
   </tr>
 </table>
 
 <h2 id="FormacionAcademica">Formación académica<span class="icon">&#xe914;</span></h2>
 <br>
-<table class="table table-striped table-bordered table-hover">
+<table class="table table-hover table-condensed">
   <tr>
-    <td class="text-center info"><strong>Titulación</strong></td>
-    <td class="text-center info"><strong>Lugar</strong></td>
-    <td class="text-center info"><strong>Duración</strong></td>
+    <td class="col-md-2 text-center">Fecha</td>
+    <td class="col-md-10 info">Titulación</td>
   </tr>
   <tr>
-    <td class="text-center">Título 1</td>
-    <td class="text-center">Lugar 1 <a href="www.coacm.org">Enlace 01</a></td>
-    <td class="text-center">Duración 1</td>
+    <td class="col-md-2 text-center"><span class="icon-blue">&#xe91b;</span></td>
+    <td class="col-md-10">Lugar</td>
   </tr>
   <tr>
-    <td class="text-center">Título 2</td>
-    <td class="text-center">Lugar 2 <a href="www.coacm.org">Enlace 02</a></td>
-    <td class="text-center">Duración 2</td>
-  </tr><tr>
-    <td class="text-center">Título n</td>
-    <td class="text-center">Lugar n <a href="www.coacm.org">Enlace n</a></td>
-    <td class="text-center">Duración n</td>
+    <td class="col-md-2 text-center"><span class="icon-blue">&#xe915;</span></td>
+    <td class="col-md-10">Descripción</td>
+  </tr>
+</table>
+<table class="table table-hover table-condensed">
+  <tr>
+    <td class="col-md-2 text-center">Fecha</td>
+    <td class="col-md-10 info">Titulación</td>
+  </tr>
+  <tr>
+    <td class="col-md-2 text-center"><span class="icon-blue">&#xe91b;</span></td>
+    <td class="col-md-10">Lugar</td>
+  </tr>
+  <tr>
+    <td class="col-md-2 text-center"><span class="icon-blue">&#xe915;</span></td>
+    <td class="col-md-10">Descripción</td>
   </tr>
 </table>
 
 <h2 id="FormacionComplementaria">Formación complementaria<span class="icon">&#xe91a;</span></h2>
 <br>
-<table class="table table-striped table-bordered table-hover">
+<table class="table table-hover table-condensed">
   <tr>
-    <td class="text-center info"><strong>Titulación</strong></td>
-    <td class="text-center info"><strong>Lugar</strong></td>
-    <td class="text-center info"><strong>Duración</strong></td>
+    <td class="col-md-2 text-center">Fecha</td>
+    <td class="col-md-10 info">Titulación</td>
   </tr>
   <tr>
-    <td class="text-center">Título 1</td>
-    <td class="text-center">Lugar 1 <a href="www.coacm.org">Enlace 01</a></td>
-    <td class="text-center">Duración 1</td>
+    <td class="col-md-2 text-center"><span class="icon-blue">&#xe91b;</span></td>
+    <td class="col-md-10">COAM</td>
   </tr>
   <tr>
-    <td class="text-center">Título 2</td>
-    <td class="text-center">Lugar 2 <a href="www.coacm.org">Enlace 02</a></td>
-    <td class="text-center">Duración 2</td>
-  </tr><tr>
-    <td class="text-center">Título n</td>
-    <td class="text-center">Lugar n <a href="www.coacm.org">Enlace n</a></td>
-    <td class="text-center">Duración n</td>
+    <td class="col-md-2 text-center"><span class="icon-blue">&#xe90e;</span></td>
+    <td class="col-md-10">20 horas</td>
+  </tr>
+</table>
+<table class="table table-hover table-condensed">
+  <tr>
+    <td class="col-md-2 text-center">Fecha</td>
+    <td class="col-md-10 info">Titulación</td>
+  </tr>
+  <tr>
+    <td class="col-md-2 text-center"><span class="icon-blue">&#xe91b;</span></td>
+    <td class="col-md-10">COAM</td>
+  </tr>
+  <tr>
+    <td class="col-md-2 text-center"><span class="icon-blue">&#xe90e;</span></td>
+    <td class="col-md-10">20 horas</td>
+  </tr>
+</table>
+<table class="table table-hover table-condensed">
+  <tr>
+    <td class="col-md-2 text-center">Fecha</td>
+    <td class="col-md-10 info">Titulación</td>
+  </tr>
+  <tr>
+    <td class="col-md-2 text-center"><span class="icon-blue">&#xe91b;</span></td>
+    <td class="col-md-10">COAM</td>
+  </tr>
+  <tr>
+    <td class="col-md-2 text-center"><span class="icon-blue">&#xe90e;</span></td>
+    <td class="col-md-10">20 horas</td>
+  </tr>
+</table>
+<table class="table table-hover table-condensed">
+  <tr>
+    <td class="col-md-2 text-center">Fecha</td>
+    <td class="col-md-10 info">Titulación</td>
+  </tr>
+  <tr>
+    <td class="col-md-2 text-center"><span class="icon-blue">&#xe91b;</span></td>
+    <td class="col-md-10">COAM</td>
+  </tr>
+  <tr>
+    <td class="col-md-2 text-center"><span class="icon-blue">&#xe90c;</span></td>
+    <td class="col-md-10">20 horas</td>
+  </tr>
+</table>
+<table class="table table-hover table-condensed">
+  <tr>
+    <td class="col-md-2 text-center">Fecha</td>
+    <td class="col-md-10 info">Titulación</td>
+  </tr>
+  <tr>
+    <td class="col-md-2 text-center"><span class="icon-blue">&#xe91b;</span></td>
+    <td class="col-md-10">COAM</td>
+  </tr>
+  <tr>
+    <td class="col-md-2 text-center"><span class="icon-blue">&#xe90c;</span></td>
+    <td class="col-md-10">20 horas</td>
+  </tr>
+</table>
+<table class="table table-hover table-condensed">
+  <tr>
+    <td class="col-md-2 text-center">Fecha</td>
+    <td class="col-md-10 info">Titulación</td>
+  </tr>
+  <tr>
+    <td class="col-md-2 text-center"><span class="icon-blue">&#xe91b;</span></td>
+    <td class="col-md-10">COAM</td>
+  </tr>
+  <tr>
+    <td class="col-md-2 text-center"><span class="icon-blue">&#xe90c;</span></td>
+    <td class="col-md-10">20 horas</td>
+  </tr>
+</table>
+<table class="table table-hover table-condensed">
+  <tr>
+    <td class="col-md-2 text-center">Fecha</td>
+    <td class="col-md-10 info">Titulación</td>
+  </tr>
+  <tr>
+    <td class="col-md-2 text-center"><span class="icon-blue">&#xe91b;</span></td>
+    <td class="col-md-10">COAM</td>
+  </tr>
+  <tr>
+    <td class="col-md-2 text-center"><span class="icon-blue">&#xe90c;</span></td>
+    <td class="col-md-10">20 horas</td>
+  </tr>
+</table>
+<table class="table table-hover table-condensed">
+  <tr>
+    <td class="col-md-2 text-center">Fecha</td>
+    <td class="col-md-10 info">Titulación</td>
+  </tr>
+  <tr>
+    <td class="col-md-2 text-center"><span class="icon-blue">&#xe91b;</span></td>
+    <td class="col-md-10">COAM</td>
+  </tr>
+  <tr>
+    <td class="col-md-2 text-center"><span class="icon-blue">&#xe90c;</span></td>
+    <td class="col-md-10">20 horas</td>
+  </tr>
+</table>
+<table class="table table-hover table-condensed">
+  <tr>
+    <td class="col-md-2 text-center">Fecha</td>
+    <td class="col-md-10 info">Titulación</td>
+  </tr>
+  <tr>
+    <td class="col-md-2 text-center"><span class="icon-blue">&#xe91b;</span></td>
+    <td class="col-md-10">COAM</td>
+  </tr>
+  <tr>
+    <td class="col-md-2 text-center"><span class="icon-blue">&#xe90c;</span></td>
+    <td class="col-md-10">20 horas</td>
+  </tr>
+</table>
+<table class="table table-hover table-condensed">
+  <tr>
+    <td class="col-md-2 text-center">Fecha</td>
+    <td class="col-md-10 info">Titulación</td>
+  </tr>
+  <tr>
+    <td class="col-md-2 text-center"><span class="icon-blue">&#xe91b;</span></td>
+    <td class="col-md-10">COAM</td>
+  </tr>
+  <tr>
+    <td class="col-md-2 text-center"><span class="icon-blue">&#xe90c;</span></td>
+    <td class="col-md-10">20 horas</td>
+  </tr>
+</table>
+<table class="table table-hover table-condensed">
+  <tr>
+    <td class="col-md-2 text-center">Fecha</td>
+    <td class="col-md-10 info">Titulación</td>
+  </tr>
+  <tr>
+    <td class="col-md-2 text-center"><span class="icon-blue">&#xe91b;</span></td>
+    <td class="col-md-10">COAM</td>
+  </tr>
+  <tr>
+    <td class="col-md-2 text-center"><span class="icon-blue">&#xe90c;</span></td>
+    <td class="col-md-10">20 horas</td>
+  </tr>
+</table>
+<table class="table table-hover table-condensed">
+  <tr>
+    <td class="col-md-2 text-center">Fecha</td>
+    <td class="col-md-10 info">Titulación</td>
+  </tr>
+  <tr>
+    <td class="col-md-2 text-center"><span class="icon-blue">&#xe91b;</span></td>
+    <td class="col-md-10">COAM</td>
+  </tr>
+  <tr>
+    <td class="col-md-2 text-center"><span class="icon-blue">&#xe90c;</span></td>
+    <td class="col-md-10">20 horas</td>
+  </tr>
+</table>
+<table class="table table-hover table-condensed">
+  <tr>
+    <td class="col-md-2 text-center">Fecha</td>
+    <td class="col-md-10 info">Titulación</td>
+  </tr>
+  <tr>
+    <td class="col-md-2 text-center"><span class="icon-blue">&#xe91b;</span></td>
+    <td class="col-md-10">COAM</td>
+  </tr>
+  <tr>
+    <td class="col-md-2 text-center"><span class="icon-blue">&#xe90c;</span></td>
+    <td class="col-md-10">20 horas</td>
+  </tr>
+</table>
+<table class="table table-hover table-condensed">
+  <tr>
+    <td class="col-md-2 text-center">Fecha</td>
+    <td class="col-md-10 info">Titulación</td>
+  </tr>
+  <tr>
+    <td class="col-md-2 text-center"><span class="icon-blue">&#xe91b;</span></td>
+    <td class="col-md-10">COAM</td>
+  </tr>
+  <tr>
+    <td class="col-md-2 text-center"><span class="icon-blue">&#xe90c;</span></td>
+    <td class="col-md-10">20 horas</td>
   </tr>
 </table>
 
 <h2 id="Habilidades">Habilidades y conocimientos<span class="icon">&#xe90d;</span></h2>
 <br>
-<strong>CAD/3D</strong>
-<div class="progress">
-  <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
-    <span class="sr-only">40% Complete (success)</span>
+
+
+<div class="row">
+  <div class="col-md-3">
+    <strong>CAD/3D/BIM</strong><span class="icon-blue">&#xe90f;</span>
+    <div class="progress">
+      <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
+        <span class="text-progress-bar">AutoCAD</span>
+      </div>
+    </div>
+    <div class="progress">
+      <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
+        <span class="text-progress-bar">AutoCAD</span>
+      </div>
+    </div>
+    <div class="progress">
+      <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
+        <span class="text-progress-bar">AutoCAD</span>
+      </div>
+    </div>
+    <div class="progress">
+      <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
+        <span class="text-progress-bar">AutoCAD</span>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-md-3">
+    <strong>GIS/SIG</strong><span class="icon-blue">&#xe913;</span>
+    <div class="progress">
+      <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
+        <span class="text-progress-bar">ArcGIS</span>
+      </div>
+    </div>
+    <div class="progress">
+      <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
+        <span class="text-progress-bar">ArcGIS</span>
+      </div>
+    </div>
+    <div class="progress">
+      <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
+        <span class="text-progress-bar">ArcGIS</span>
+      </div>
+    </div>
+    <div class="progress">
+      <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
+        <span class="text-progress-bar">ArcGIS</span>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-md-3">
+    <strong>Cálculo</strong><span class="icon-blue">&#xe908;</span>
+    <div class="progress">
+      <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
+        <span class="text-progress-bar">CypeCAD</span>
+      </div>
+    </div>
+    <div class="progress">
+      <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
+        <span class="text-progress-bar">CypeCAD</span>
+      </div>
+    </div>
+    <div class="progress">
+      <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
+        <span class="text-progress-bar">CypeCAD</span>
+      </div>
+    </div>
+    <div class="progress">
+      <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
+        <span class="text-progress-bar">CypeCAD</span>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-md-3">
+    <strong>Diseño gráfico</strong><span class="icon-blue">&#xe921;</span>
+    <div class="progress">
+      <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
+        <span class="text-progress-bar">Illustrator</span>
+      </div>
+    </div>
+    <div class="progress">
+      <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
+        <span class="text-progress-bar">Illustrator</span>
+      </div>
+    </div>
+    <div class="progress">
+      <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
+        <span class="text-progress-bar">Illustrator</span>
+      </div>
+    </div>
+    <div class="progress">
+      <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
+        <span class="text-progress-bar">Illustrator</span>
+      </div>
+    </div>
   </div>
 </div>
-<strong>GIS/SIG</strong>
-<div class="progress">
-  <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
-    <span class="sr-only">20% Complete</span>
-  </div>
-</div>
-<strong>BIM</strong>
-<div class="progress">
-  <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
-    <span class="sr-only">60% Complete (warning)</span>
-  </div>
-</div>
-<strong>Diseño gráfico</strong>
-<div class="progress">
-  <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-    <span class="sr-only">80% Complete (danger)</span>
-  </div>
-</div>
-<strong>Cálculo</strong>
-<div class="progress">
-  <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-    <span class="sr-only">80% Complete (danger)</span>
-  </div>
-</div>
-<ul>
-  <li><strong>CAD/3D:</strong> AutoCAD</li>
-  <li><strong>GIS/SIG:</strong> ArcGIS</li>
-  <li><strong>BIM:</strong> Revit</li>
-  <li><strong>Diseño gráfico:</strong> Illustrator</li>
-  <li><strong>Ofimática:</strong> Office 365</li>
-  <li><strong>Cálculo:</strong> CypeCAD</li>
-</ul>
 
 <h2 id="Otros">Otros datos de interés<span class="icon">&#xe904;</span></h2>
 <br>
-<ul>
-  <li><strong>Afiliaciones profesionales:</strong> <a href="www.coacm.org">Colegio Oficial de Arquitectos de Castilla-La Mancha</a> (COACM)</li>
-  <li><strong>Disponibilidad para viajar:</strong> Sí</li>
-  <li><strong>Cambio de residencia:</strong> Sí</li>
-  <li><strong>Licencia de conducir:</strong> B</li>
-</ul>
+<div class="row">
+  <div class="col-md-3">
+    <span class="icon-blue-left">&#xe902;</span><strong> Disponibilidad</strong><br>
+    <ul>
+        <li>Cambio de residencia: Inmediata</li>
+        <li>Viajar: Inmediata</li>
+    </ul>
+    <span class="icon-blue-left">&#xe92d;</span><strong> Permiso de conducir</strong><br>
+    <ul>
+        <li>B</li>
+    </ul>
+  </div>
+
+  <div class="col-md-3">
+      <span class="icon-blue-left">&#xe92c;</span><strong> Afiliaciones profesionales</strong><br>
+      <a href="www.coacm.org">Colegio Oficial de Arquitectos de Castilla-La Mancha</a> (COACM)
+  </div>
+  <div class="col-md-3">
+    <span class="icon-blue-left">&#xe917;</span><strong> Idiomas</strong><br>
+    Inglés
+    <ul>
+        <li>Escrito: Medio</li>
+        <li>Hablado: Medio</li>
+    </ul>
+  </div>
+  <div class="col-md-3">
+    <span class="icon-blue-left">&#xe924;</span><strong> Aficiones</strong>
+  </div>
+</div>
 
 <h2 id="Contacto">Contacto<a class="icon-link" href="https://es.linkedin.com/"><span class="icon">&#xe930;</span></a>
   <a class="icon-link" href="https://es.pinterest.com/csanchezcastro/"><span class="icon">&#xe931;</span></a>
