--- a/index.html
+++ b/index.html
@@ -111,140 +111,150 @@ Menu <span class="caret"></span>
         <div class="col-md-2 text-center">
           <img id="fotojumbo" src="resources/foto.png" alt="Foto de Carlos Sánchez-Castro Coy">
         </div>
-        <div class="col-md-10">
+        <div class="col-md-8">
           <h1 id="minombre">Carlos Sánchez-Castro Coy</h1>
           <p>Arquitecto. Analista y desarrollador GIS (en formación)</p>
+        </div>
+        <div class="col-md-2">
+          <a class="btn btn-info" role="button" data-toggle="collapse" href="#collapseCarousel" aria-expanded="false" aria-controls="collapseCarousel">
+            Galería de imágenes <span class="icon icon-images"></span>
+          </a>
         </div>
       </div>
     </div>
   </div>
 </div>
 
-<div id="mycarousel" class="carousel slide" data-ride="carousel" data-interval="10000">
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#mycarousel" data-slide-to="0" class="active"></li>
-    <li data-target="#mycarousel" data-slide-to="1"></li>
-    <li data-target="#mycarousel" data-slide-to="2"></li>
-    <li data-target="#mycarousel" data-slide-to="3"></li>
-    <li data-target="#mycarousel" data-slide-to="4"></li>
-    <li data-target="#mycarousel" data-slide-to="5"></li>
-    <li data-target="#mycarousel" data-slide-to="6"></li>
-    <li data-target="#mycarousel" data-slide-to="7"></li>
-    <li data-target="#mycarousel" data-slide-to="8"></li>
-    <li data-target="#mycarousel" data-slide-to="9"></li>
-    <li data-target="#mycarousel" data-slide-to="10"></li>
-    <li data-target="#mycarousel" data-slide-to="11"></li>
-    <li data-target="#mycarousel" data-slide-to="12"></li>
-    <li data-target="#mycarousel" data-slide-to="13"></li>
-    <li data-target="#mycarousel" data-slide-to="14"></li>
-  </ol>
+<div class="collapse" id="collapseCarousel">
+  <div id="mycarousel" class="carousel slide" data-ride="carousel" data-interval="10000">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#mycarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#mycarousel" data-slide-to="1"></li>
+      <li data-target="#mycarousel" data-slide-to="2"></li>
+      <li data-target="#mycarousel" data-slide-to="3"></li>
+      <li data-target="#mycarousel" data-slide-to="4"></li>
+      <li data-target="#mycarousel" data-slide-to="5"></li>
+      <li data-target="#mycarousel" data-slide-to="6"></li>
+      <li data-target="#mycarousel" data-slide-to="7"></li>
+      <li data-target="#mycarousel" data-slide-to="8"></li>
+      <li data-target="#mycarousel" data-slide-to="9"></li>
+      <li data-target="#mycarousel" data-slide-to="10"></li>
+      <li data-target="#mycarousel" data-slide-to="11"></li>
+      <li data-target="#mycarousel" data-slide-to="12"></li>
+      <li data-target="#mycarousel" data-slide-to="13"></li>
+      <li data-target="#mycarousel" data-slide-to="14"></li>
+    </ol>
 
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner" role="listbox">
-    <div class="item active">
-      <img class="center-block" src="resources/Canteras.png" alt="Análisis multicriterio para la ubicación de unas canteras y una planta solar">
-      <div class="carousel-caption">
-        Análisis multicriterio para la ubicación de unas canteras<br>y una planta solar asociada
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+      <div class="item active">
+        <img class="center-block" src="resources/Canteras.png" alt="Análisis multicriterio para la ubicación de unas canteras y una planta solar">
+        <div class="carousel-caption">
+          Análisis multicriterio para la ubicación de unas canteras<br>y una planta solar asociada
+        </div>
+      </div>
+      <div class="item">
+        <img class="center-block" src="resources/Alcoy_01.png" alt="Análisis multicriterio para la ubicación de una guardería municipal en Alcoy">
+        <div class="carousel-caption">
+          Análisis multicriterio para la ubicación de una guardería<br>municipal en Alcoy
+        </div>
+      </div>
+      <div class="item">
+        <img class="center-block" src="resources/Alcoy_05.png" alt="Análisis de un entorno urbano con ArcScene">
+        <div class="carousel-caption">
+          Análisis de un entorno urbano con ArcScene
+        </div>
+      </div>
+      <div class="item">
+        <img class="center-block" src="resources/Ibi_01.png" alt="Población y viviendas afectadas por inundación en Ibi">
+        <div class="carousel-caption">
+          Población y viviendas afectadas por inundación en Ibi
+        </div>
+      </div>
+      <div class="item">
+        <img class="center-block" src="resources/Ibi_02.png" alt="Daños económicos por inundación en Ibi">
+        <div class="carousel-caption">
+          Daños económicos por inundación en Ibi
+        </div>
+      </div>
+      <div class="item">
+        <img class="center-block" src="resources/San_Sebastian.png" alt="Estudio de visibilidad en San Sebastián">
+        <div class="carousel-caption">
+          Estudio de visibilidad en San Sebastián
+        </div>
+      </div>
+      <div class="item">
+        <img class="center-block" src="resources/Valencia_01.png" alt="Densidad del polen en Valencia">
+        <div class="carousel-caption">
+          Densidad del polen en Valencia
+        </div>
+      </div>
+      <div class="item">
+        <img class="center-block" src="resources/Valencia_02.png" alt="Densidad de contenedores de aceite en función de su capacidad en Valencia">
+        <div class="carousel-caption">
+          Densidad de contenedores de aceite en función<br>de su capacidad en Valencia
+        </div>
+      </div>
+      <div class="item">
+        <img class="center-block" src="resources/Valencia_03.png" alt="Indicadores urbanos en el municipio de Valencia">
+        <div class="carousel-caption">
+          Indicadores urbanos en el municipio de Valencia<br>Centrality (Reach)
+        </div>
+      </div>
+      <div class="item">
+        <img class="center-block" src="resources/Valencia_04.png" alt="Densidad de habitantes por sección censal en los distritos 1, 2 y 3 de Valencia">
+        <div class="carousel-caption">
+          Densidad de habitantes por sección censal<br>en los distritos 1, 2 y 3 de Valencia
+        </div>
+      </div>
+      <div class="item">
+        <img class="center-block" src="resources/Tavernes_01.png" alt="Análisis para la ubicación de un vertedero en Tavernes de la Valldigna">
+        <div class="carousel-caption">
+          Análisis para la ubicación de un vertedero<br>en Tavernes de la Valldigna
+        </div>
+      </div>
+      <div class="item">
+        <img class="center-block" src="resources/Tavernes_02.png" alt="Aptitud territorial para la ubicación de un<br>vertedero en Tavernes de la Valldigna">
+        <div class="carousel-caption">
+          Aptitud territorial para la ubicación de un<br>vertedero en Tavernes de la Valldigna
+        </div>
+      </div>
+      <div class="item">
+        <img class="center-block" src="resources/Tavernes_03.png" alt="Cáculo de rutas para el convoy de recogida de residuos en Tavernes de la Valldigna">
+        <div class="carousel-caption">
+          Cáculo de rutas para el convoy de recogida de<br>residuos en Tavernes de la Valldigna
+        </div>
+      </div>
+      <div class="item">
+        <img class="center-block" src="resources/CityEngine_01.png" alt="Modelización de entornos urbanos con CityEngine">
+        <div class="carousel-caption">
+          Modelización de entornos urbanos con CityEngine
+        </div>
+      </div>
+      <div class="item">
+        <img class="center-block" src="resources/CityEngine_02.png" alt="Creación de reglas CGA de CityEngine">
+        <div class="carousel-caption">
+          Creación de reglas CGA de CityEngine
+        </div>
       </div>
     </div>
-    <div class="item">
-      <img class="center-block" src="resources/Alcoy_01.png" alt="Análisis multicriterio para la ubicación de una guardería municipal en Alcoy">
-      <div class="carousel-caption">
-        Análisis multicriterio para la ubicación de una guardería<br>municipal en Alcoy
-      </div>
-    </div>
-    <div class="item">
-      <img class="center-block" src="resources/Alcoy_05.png" alt="Análisis de un entorno urbano con ArcScene">
-      <div class="carousel-caption">
-        Análisis de un entorno urbano con ArcScene
-      </div>
-    </div>
-    <div class="item">
-      <img class="center-block" src="resources/Ibi_01.png" alt="Población y viviendas afectadas por inundación en Ibi">
-      <div class="carousel-caption">
-        Población y viviendas afectadas por inundación en Ibi
-      </div>
-    </div>
-    <div class="item">
-      <img class="center-block" src="resources/Ibi_02.png" alt="Daños económicos por inundación en Ibi">
-      <div class="carousel-caption">
-        Daños económicos por inundación en Ibi
-      </div>
-    </div>
-    <div class="item">
-      <img class="center-block" src="resources/San_Sebastian.png" alt="Estudio de visibilidad en San Sebastián">
-      <div class="carousel-caption">
-        Estudio de visibilidad en San Sebastián
-      </div>
-    </div>
-    <div class="item">
-      <img class="center-block" src="resources/Valencia_01.png" alt="Densidad del polen en Valencia">
-      <div class="carousel-caption">
-        Densidad del polen en Valencia
-      </div>
-    </div>
-    <div class="item">
-      <img class="center-block" src="resources/Valencia_02.png" alt="Densidad de contenedores de aceite en función de su capacidad en Valencia">
-      <div class="carousel-caption">
-        Densidad de contenedores de aceite en función<br>de su capacidad en Valencia
-      </div>
-    </div>
-    <div class="item">
-      <img class="center-block" src="resources/Valencia_03.png" alt="Indicadores urbanos en el municipio de Valencia">
-      <div class="carousel-caption">
-        Indicadores urbanos en el municipio de Valencia<br>Centrality (Reach)
-      </div>
-    </div>
-    <div class="item">
-      <img class="center-block" src="resources/Valencia_04.png" alt="Densidad de habitantes por sección censal en los distritos 1, 2 y 3 de Valencia">
-      <div class="carousel-caption">
-        Densidad de habitantes por sección censal<br>en los distritos 1, 2 y 3 de Valencia
-      </div>
-    </div>
-    <div class="item">
-      <img class="center-block" src="resources/Tavernes_01.png" alt="Análisis para la ubicación de un vertedero en Tavernes de la Valldigna">
-      <div class="carousel-caption">
-        Análisis para la ubicación de un vertedero<br>en Tavernes de la Valldigna
-      </div>
-    </div>
-    <div class="item">
-      <img class="center-block" src="resources/Tavernes_02.png" alt="Aptitud territorial para la ubicación de un<br>vertedero en Tavernes de la Valldigna">
-      <div class="carousel-caption">
-        Aptitud territorial para la ubicación de un<br>vertedero en Tavernes de la Valldigna
-      </div>
-    </div>
-    <div class="item">
-      <img class="center-block" src="resources/Tavernes_03.png" alt="Cáculo de rutas para el convoy de recogida de residuos en Tavernes de la Valldigna">
-      <div class="carousel-caption">
-        Cáculo de rutas para el convoy de recogida de<br>residuos en Tavernes de la Valldigna
-      </div>
-    </div>
-    <div class="item">
-      <img class="center-block" src="resources/CityEngine_01.png" alt="Modelización de entornos urbanos con CityEngine">
-      <div class="carousel-caption">
-        Modelización de entornos urbanos con CityEngine
-      </div>
-    </div>
-    <div class="item">
-      <img class="center-block" src="resources/CityEngine_02.png" alt="Creación de reglas CGA de CityEngine">
-      <div class="carousel-caption">
-        Creación de reglas CGA de CityEngine
-      </div>
-    </div>
+
+    <!-- Controls -->
+    <a class="left carousel-control" href="#mycarousel" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Anterior</span>
+    </a>
+    <a class="right carousel-control" href="#mycarousel" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Siguiente</span>
+    </a>
   </div>
+  <br>
 
-  <!-- Controls -->
-  <a class="left carousel-control" href="#mycarousel" role="button" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-    <span class="sr-only">Anterior</span>
-  </a>
-  <a class="right carousel-control" href="#mycarousel" role="button" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-    <span class="sr-only">Siguiente</span>
-  </a>
 </div>
-<br>
+
+
 <!--<div>
 <a class="anchor" id="Experiencia"></a>
 <h2 id="Experiencia">Experiencia profesional</h2>
@@ -820,6 +830,7 @@ Menu <span class="caret"></span>
     </div>
   </div>
 </div>
+
 <footer>
   <div class="row">
     <div class="col-md-4 col-md-offset-4 text-center">
