--- a/index.html
+++ b/index.html
@@ -806,7 +806,7 @@ Menu <span class="caret"></span>
   <a target="_blank" class="icon-link" href="https://es.pinterest.com/csanchezcastro/"><span class="icon-pinterest"></span></a>
   <a target="_blank" class="icon-link" href="https://twitter.com/csanchezcastro"><span class="icon-twitter"></span></a>
   <a class="icon-link" href="mailto:arq.csanchezcastro@outlook.com"><span class="icon-mail"></span></a>
-
+  <a class="icon-link" data-toggle="modal" data-target="#myModal2" href=""><span class="icon-documents"></span></a>
   <a class="icon-link" data-toggle="modal" data-target="#myModal" href=""><span class="icon-qrcode"></span></a>
   <a class="goup-link" href="#">
     <span class="dropup">
@@ -835,6 +835,33 @@ Menu <span class="caret"></span>
             <a target="_blank" href="https://scanbot.io/en/index.html"><img class="appicon" src="resources/Scanbot.png" alt="Icono de Scanbot"></a>
             <a target="_blank" href="https://itunes.apple.com/app/apple-store/id834854351"><img class="storeicon" src="https://d23q6jsy9lr4bo.cloudfront.net/assets/images/buttons/appstore.svg" alt="Scanbot en el App Store de Apple"></a>
             <a target="_blank" href="https://play.google.com/store/apps/details?id=net.doo.snap"><img class="storeicon" src="https://d23q6jsy9lr4bo.cloudfront.net/assets/images/buttons/playstore.svg" alt="Scanbot en Google Play Store"></a>
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModal2Label">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModal2Label">Versión imprimible en formato PDF</h4>
+      </div>
+      <div class="modal-body">
+        <div class="row">
+          <div class="col-md-4">
+            <div class="text-center">
+              <img id="miniaturasCV" src="resources/miniaturasCV.png" alt="Miniaturas CV">
+            </div>
+          </div>
+          <div class="col-md-8">Pulse en el botón para descargar una versión imprimible de este documento en formato PDF:</div>
+          <div class="text-center">
+            <a target="_blank" href="resources/CV.pdf" class="btn btn-info" role="button">Descargar PDF <span id="icon-documents-modal"></span></a>
           </div>
         </div>
       </div>
